<resources>
	<string name="empty" translatable="false"></string>
	<string name="app_name" translatable="false">Cryptomator</string>
	<string name="download_subdirectory_name" translatable="false">@string/app_name</string>
	<string name="vault_cryptomator" translatable="false">vault.cryptomator</string>
	<string name="masterkey_cryptomator" translatable="false">masterkey.cryptomator</string>
	<string name="share_with_label">Encrypt</string>
	<string name="error_generic">An error occurred</string>
	<string name="error_authentication_failed">Authentication failed</string>
	<string name="error_authentication_failed_re_authenticate">Authentication failed, please login using %1$s</string>
	<string name="error_no_network_connection">No network connection</string>
	<string name="error_no_space_left">Not enough storage space on your device. Please free up some space and try again.</string>
	<string name="error_purchase_not_available">Purchase not available. Please try again later.</string>
	<string name="error_invalid_passphrase">Wrong password</string>
	<string name="error_file_or_folder_exists">A file or folder already exists.</string>
	<string name="error_vault_version_not_supported">Vault version %1$s is unsupported. This vault has been created with an older or newer version of Cryptomator.</string>
	<string name="error_vault_config_file_missing_due_to_format_999">%1$s file is missing in your vault folder. Make sure that this file exists in your vault folder in the cloud.</string>
	<string name="error_vault_already_exists">Vault already exists.</string>
	<string name="error_no_such_file">File does not exist.</string>
	<string name="error_vault_has_been_locked">Vault has been locked.</string>
	<string name="error_cloud_already_exists">Cloud already exists.</string>
	<string name="error_activity_not_found">Please download an app that can open this file.</string>
	<string name="error_server_not_found">Server not found.</string>
	<string name="error_device_policy_manager_not_found">Please open your device settings and set the screen lock by hand</string>
	<string name="error_export_illegal_file_name">Export failed. Try to remove special characters from file names and export again.</string>
	<string name="error_name_contains_invalid_characters">Can\'t contain special characters.</string>
	<string name="error_names_contains_invalid_characters">File names can\'t contain special characters.</string>
	<string name="error_vault_name_contains_invalid_characters">Vault name can\'t contain special characters.</string>
	<string name="error_general_update">Update check failed. General error occurred.</string>
	<string name="error_hash_mismatch_update">Update check failed. Calculated hash doesn\'t match the uploaded file</string>
	<string name="error_update_no_internet">Update check failed. No internet connection.</string>
	<string name="error_failed_to_decrypt_webdav_password">Failed to decrypt WebDAV password, please re-add in settings</string>
	<string name="error_play_services_not_available">Google Play Services not installed</string>
	<string name="error_biometric_auth_aborted">Biometric authentication aborted</string>
	<string name="error_vault_version_mismatch">Version specified in %1$s is different to %2$s</string>
	<string name="error_vault_key_invalid">%1$s does not match with this %2$s</string>
	<string name="error_vault_config_loading">General error while loading the vault config</string>
	<string name="error_file_not_found_after_opening_using_3party">Local file isn\'t present anymore after switching back to Cryptomator. Possible changes cannot be propagated back to the cloud.</string>
	<string name="error_no_such_bucket">No such bucket</string>
	<string name="error_masterkey_location_not_supported">Custom Masterkey location not supported yet</string>
	<string name="error_interact_with_fdroid_but_fdroid_missing">Failed to communicate with the F-Droid app. Not installed?</string>
	<string name="error_hub_vault_operation_not_supported">Vault operation not supported for Hub</string>
	<string name="error_hub_authentication_failed">Authentication against Hub failed</string>
	<string name="screen_welcome_notifications_title">Stay notified</string>
	<string name="screen_welcome_notifications_message">Allow notifications so Cryptomator can inform you about background activity, auto uploads, or other important events.</string>
	<string name="screen_welcome_notifications_button">Allow notifications</string>
	<string name="screen_welcome_notifications_granted">Notifications are enabled.</string>
	<string name="screen_welcome_screen_lock_button">Set screen lock</string>
	<string name="screen_welcome_screen_lock_already_set">Screen lock is already set.</string>
	<string name="snack_bar_action_title_search">Search</string>
	<string name="snack_bar_action_title_sort">Sort</string>
	<string name="snack_bar_action_title_sort_az">A - Z</string>
	<string name="snack_bar_action_title_sort_za">Z - A</string>
	<string name="snack_bar_action_title_sort_newest">Newest first</string>
	<string name="snack_bar_action_title_sort_oldest">Oldest first</string>
	<string name="snack_bar_action_title_sort_biggest">Biggest first</string>
	<string name="snack_bar_action_title_sort_smallest">Smallest first</string>
	<string name="screen_file_browser_move_button_text">Move</string>
	<string name="screen_file_browser_action_create_folder">Create folder</string>
	<string name="screen_file_browser_action_create_new_text_file">Create text file</string>
	<string name="screen_file_browser_action_upload_files">Upload files</string>
	<string name="screen_file_browser_node_action_share">Share</string>
	<string name="screen_file_browser_node_action_export">Export</string>
	<string name="screen_file_browser_node_action_delete">Delete</string>
	<string name="screen_file_browser_select_items">Select</string>
	<string name="screen_file_browser_select_all_items">Select all</string>
	<string name="screen_file_browser_refresh_items">Refresh</string>
	<string name="screen_webdav_settings_done_button_text">Connect</string>
	<string name="screen_s3_settings_display_name_label">Display Name</string>
	<string name="screen_s3_settings_access_key_label">Access Key</string>
	<string name="screen_s3_settings_secret_key_label">Secret Key</string>
	<string name="screen_s3_settings_bucket_label">Existing Bucket</string>
	<string name="screen_s3_settings_endpoint_label">Endpoint</string>
	<string name="screen_s3_settings_region_label">Region</string>
	<string name="screen_settings_section_general">General</string>
	<string name="screen_settings_cloud_settings_label">Cloud services</string>
	<string name="screen_settings_biometric_auth">Biometric authentication</string>
	<string name="screen_settings_block_app_when_obscured">Block app when obscured</string>
	<string name="screen_settings_block_app_when_obscured_summary">Block intercepting the input and displaying a false user interface</string>
	<string name="screen_settings_secure_screen">Block screenshots</string>
	<string name="screen_settings_secure_screen_summary">Block screenshots in the recents list and inside the app</string>
	<string name="screen_settings_section_search">Search</string>
	<string name="screen_settings_live_search">Live search</string>
	<string name="screen_settings_live_search_summary">Update search results while entering the query</string>
	<string name="screen_settings_glob_search">Search using glob pattern</string>
	<string name="screen_settings_glob_search_summary">Use glob pattern matching like alice.*.jpg</string>
	<string name="screen_settings_section_auto_lock">Automatic locking</string>
	<string name="screen_settings_auto_lock_timeout">Lock after</string>
	<string name="screen_settings_auto_lock_on_screen_lock">When screen is disabled</string>
	<string name="screen_settings_section_auto_photo_upload">Automatic photo upload</string>
	<string name="screen_settings_section_auto_photo_upload_vault">Choose vault for upload</string>
	<string name="screen_settings_section_auto_photo_upload_toggle">Activate</string>
	<string name="screen_settings_section_auto_photo_upload_toggle_summary">Capture images in the background and once the selected vault is unlocked, start upload</string>
	<string name="screen_settings_section_auto_photo_upload_toggle_instant_upload">Upload instant</string>
	<string name="screen_settings_section_auto_photo_upload_toggle_instant_upload_summary">Upload directly if the vault is unlocked</string>
	<string name="screen_settings_section_auto_photo_upload_only_wifi_toggle">Upload only using WIFI</string>
	<string name="screen_settings_section_auto_photo_upload_including_videos">Upload videos</string>
	<string name="screen_settings_section_social" translatable="false">@string/screen_webdav_settings_done_button_text</string>
	<string name="screen_settings_website_label">Cryptomator website</string>
	<string name="screen_settings_facebook_label">Like us on Facebook</string>
	<string name="screen_settings_website_uri" translatable="false">https://cryptomator.org</string>
	<string name="screen_settings_facebook_uri" translatable="false">https://facebook.com/Cryptomator</string>
	<string name="screen_settings_section_legal">Legal</string>
	<string name="screen_settings_licenses_label">Licenses</string>
	<string name="screen_settings_section_support">Support</string>
	<string name="screen_settings_contact_label">Request help</string>
	<string name="screen_settings_support_uri" translatable="false">https://cryptomator.org/contact/</string>
	<string name="screen_settings_debug_mode_label">Debug mode</string>
	<string name="screen_settings_error_report_label">Send log file</string>
	<string name="screen_settings_security_label">Security hints</string>
	<string name="screen_settings_security_url" translatable="false">https://docs.cryptomator.org/en/latest/security/best-practices/</string>
	<string name="screen_settings_section_version">Version</string>
	<string name="screen_settings_advanced_settings">Advanced Settings</string>
	<string name="screen_settings_background_unlock_preparation_label">Accelerate unlock</string>
	<string name="screen_settings_background_unlock_preparation_label_summary">Download vault config in the background while prompted to enter the password or biometric auth</string>
	<string name="screen_settings_keep_unlocked_while_editing_files">Keep unlocked</string>
	<string name="screen_settings_keep_unlocked_while_editing_files_summary">Keep vaults unlocked while editing files</string>
	<string name="dialog_no_screen_lock_hint">No screen lock is set. To store your credentials in a secure way, set with OK a pattern or password.</string>
	<string name="dialog_no_screen_lock_title">Set screen lock?</string>
	<string name="dialog_no_screen_lock_checkbox">Set screen lock</string>
	<string name="dialog_enter_sharepoint_url_hint">SharePoint site URL</string>
	<string name="dialog_enter_sharepoint_url_prefill" translatable="false">https://</string>
	<string name="dialog_enter_sharepoint_url_format">Enter the address of your SharePoint site, e.g. https://{…}.sharepoint.com/sites/{…}.</string>
	<string name="screen_settings_lru_cache">Cache</string>
	<string name="screen_settings_lru_cache_toggle" translatable="false">@string/screen_settings_section_auto_photo_upload_toggle</string>
	<string name="screen_settings_lru_cache_toggle_summary">Cache recently accessed files encrypted locally on the device for later reuse when reopened</string>
	<string name="screen_settings_lru_cache_size">Total cache size</string>
	<string name="screen_settings_clear_lru_cache_size">Clear Cache</string>
	<string name="dialog_settings_update_check_interval_title">Update check interval</string>
	<string name="screen_settings_check_updates">Check for updates</string>
	<string name="dialog_cache_size_title">Cache size per Cloud</string>
	<string name="screen_settings_style_mode">Style</string>
</resources>