<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/activityRootView">

	<PreferenceCategory
		android:key="license"
		android:title="@string/screen_settings_license">

		<androidx.preference.PreferenceScreen
			android:enabled="false"
			android:key="mail" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="@string/screen_settings_section_general"
		android:title="@string/screen_settings_section_general">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_cloud_settings_label">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="org.cryptomator.presentation.ui.activity.CloudSettingsActivity"
				android:targetPackage="@string/app_id" />

		</androidx.preference.PreferenceScreen>

		<androidx.preference.PreferenceScreen
			android:key="biometricAuthentication"
			android:title="@string/screen_settings_biometric_auth">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="org.cryptomator.presentation.ui.activity.BiometricAuthSettingsActivity"
				android:targetPackage="@string/app_id" />

		</androidx.preference.PreferenceScreen>

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="disableAppWhenObscured"
			android:summary="@string/screen_settings_block_app_when_obscured_summary"
			android:title="@string/screen_settings_block_app_when_obscured" />

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="secureScreen"
			android:summary="@string/screen_settings_secure_screen_summary"
			android:title="@string/screen_settings_secure_screen" />

		<ListPreference
			android:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
			android:dialogTitle="@string/screen_settings_style_mode"
			android:entries="@array/screen_settings_style_mode_entries"
			android:entryValues="@array/screen_settings_style_mode_values"
			android:key="screenStyleMode"
			android:summary="%s"
			android:title="@string/screen_settings_style_mode" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_search">

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="liveSearch"
			android:summary="@string/screen_settings_live_search_summary"
			android:title="@string/screen_settings_live_search" />

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="globSearch"
			android:summary="@string/screen_settings_glob_search_summary"
			android:title="@string/screen_settings_glob_search" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="@string/screen_settings_section_auto_lock"
		android:title="@string/screen_settings_section_auto_lock">

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="lockOnScreenOff"
			android:title="@string/screen_settings_auto_lock_on_screen_lock" />

		<ListPreference
			android:defaultValue="ONE_MINUTE"
			android:dialogTitle="@string/screen_settings_auto_lock_timeout"
			android:entries="@array/screen_settings_auto_lock_entries"
			android:entryValues="@array/screen_settings_auto_lock_values"
			android:key="lockTimeout"
			android:summary="%s"
			android:title="@string/screen_settings_auto_lock_timeout" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="@string/screen_settings_section_auto_photo_upload"
		android:title="@string/screen_settings_section_auto_photo_upload">

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="photoUpload"
			android:summary="@string/screen_settings_section_auto_photo_upload_toggle_summary"
			android:title="@string/screen_settings_section_auto_photo_upload_toggle" />

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="photoUploadInstant"
			android:summary="@string/screen_settings_section_auto_photo_upload_toggle_instant_upload_summary"
			android:title="@string/screen_settings_section_auto_photo_upload_toggle_instant_upload" />

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="photoUploadOnlyUsingWifi"
			android:title="@string/screen_settings_section_auto_photo_upload_only_wifi_toggle" />

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="photoUploadIncludingVideos"
			android:title="@string/screen_settings_section_auto_photo_upload_including_videos" />

		<androidx.preference.PreferenceScreen
			android:key="photoUploadVault"
			android:title="@string/screen_settings_section_auto_photo_upload_vault">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="org.cryptomator.presentation.ui.activity.AutoUploadChooseVaultActivity"
				android:targetPackage="@string/app_id" />
		</androidx.preference.PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_lru_cache">

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="lruCache"
			android:summary="@string/screen_settings_lru_cache_toggle_summary"
			android:title="@string/screen_settings_lru_cache_toggle" />

		<ListPreference
			android:defaultValue="100"
			android:dialogTitle="@string/dialog_cache_size_title"
			android:entries="@array/cache_size_entries"
			android:entryValues="@array/cache_size_values"
			android:key="lruCacheSize"
			android:summary="%s"
			android:title="@string/dialog_cache_size_title" />

		<androidx.preference.PreferenceScreen
			android:key="displayLruCacheSize"
			android:title="@string/screen_settings_lru_cache_size" />

		<androidx.preference.PreferenceScreen
			android:key="lruCacheClear"
			android:title="@string/screen_settings_clear_lru_cache_size" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_support">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_contact_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_support_uri" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="debugMode"
			android:title="@string/screen_settings_debug_mode_label" />

		<androidx.preference.PreferenceScreen
			android:key="sendErrorReport"
			android:title="@string/screen_settings_error_report_label" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_advanced_settings">

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="backgroundUnlockPreparation"
			android:summary="@string/screen_settings_background_unlock_preparation_label_summary"
			android:title="@string/screen_settings_background_unlock_preparation_label" />

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="keepUnlockedWhileEditing"
			android:summary="@string/screen_settings_keep_unlocked_while_editing_files_summary"
			android:title="@string/screen_settings_keep_unlocked_while_editing_files" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_social">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_website_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_website_uri" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_twitter_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_twitter_uri" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_facebook_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_facebook_uri" />
		</androidx.preference.PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_legal">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_licenses_label">
			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="org.cryptomator.presentation.ui.activity.LicensesActivity"
				android:targetPackage="@string/app_id" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_security_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_security_url" />
		</androidx.preference.PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="versionCategory"
		android:title="@string/screen_settings_section_version">

		<androidx.preference.PreferenceScreen
			android:enabled="false"
			android:key="appVersion"
			android:title="@string/app_name" />

		<ListPreference
			android:defaultValue="7"
			android:dialogTitle="@string/dialog_settings_update_check_interval_title"
			android:entries="@array/update_interval_entries"
			android:entryValues="@array/update_interval_values"
			android:key="updateInterval"
			android:summary="%s"
			android:title="@string/dialog_settings_update_check_interval_title" />

		<androidx.preference.PreferenceScreen
			android:key="updateCheck"
			android:title="@string/screen_settings_check_updates" />

	</PreferenceCategory>

</androidx.preference.PreferenceScreen>
