<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvScreenLockTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_no_screen_lock_title"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScreenLockMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_no_screen_lock_hint" />

        <CheckBox
            android:id="@+id/cbSetScreenLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/dialog_no_screen_lock_checkbox" />

        <Button
            android:id="@+id/btnSetScreenLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/screen_welcome_screen_lock_button" />

        <TextView
            android:id="@+id/tvScreenLockStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:accessibilityLiveRegion="polite"
            android:text="@string/screen_welcome_screen_lock_already_set"
            android:textAppearance="?attr/textAppearanceBody2"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
