<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/activity_vertical_margin">

		<TextView
			android:id="@+id/tv_sharepoint_url_format"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_enter_sharepoint_url_format" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_sharepoint_url"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:hint="@string/dialog_enter_sharepoint_url_hint">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/et_sharepoint_url"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionDone|flagNoPersonalizedLearning"
				android:inputType="textUri"
				android:maxLines="1"
				android:text="@string/dialog_enter_sharepoint_url_prefill" />
		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>
</androidx.core.widget.NestedScrollView>
