<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="8dp">

		<TextView
			android:id="@+id/title"
			style="AppTheme.ListItemLightTextColor"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:ellipsize="middle"
			android:gravity="center_vertical"
			android:paddingStart="16dp"
			android:paddingEnd="16dp"
			android:singleLine="true"
			android:textSize="16sp" />
		<!-- using android:singleLine to fix https://code.google.com/p/android/issues/detail?id=33868 -->

		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="16dp"
			android:background="@color/list_divider" />

		<TextView
			android:id="@+id/upload_files"
			style="@style/AppTheme.ListItem"
			android:text="@string/screen_file_browser_action_upload_files"
			app:drawableStartCompat="@drawable/ic_file_upload_gray" />

		<TextView
			android:id="@+id/create_new_folder"
			style="@style/AppTheme.ListItem"
			android:text="@string/screen_file_browser_action_create_folder"
			app:drawableStartCompat="@drawable/ic_folder" />

		<TextView
			android:id="@+id/create_new_text_file"
			style="@style/AppTheme.ListItem"
			android:text="@string/screen_file_browser_action_create_new_text_file"
			app:drawableStartCompat="@drawable/ic_file" />

	</LinearLayout>
</androidx.core.widget.NestedScrollView>
